--- a/public/verifyEmail.html
+++ b/public/verifyEmail.html
@@ -222,7 +222,7 @@
                     float: center;
                     text-align: center;
                   ">
-                            Copyright © soothesayer 2024
+                            Copyright © madhousewallet 2024
                         </p>
 
                     </td>
