--- a/public/registerotp.html
+++ b/public/registerotp.html
@@ -192,7 +192,7 @@
                 color: #000;
                 text-align: left;
               ">
-                            The Madhouse Team 💕
+                            The Madhouse Wallet
                         </p>
 
                     </td>
@@ -222,7 +222,7 @@
                     float: center;
                     text-align: center;
                   ">
-                            Copyright © madhousewallet 2024
+                            The Walker Ledger Ltd. All rights reserved.
                         </p>
 
                     </td>
