--- a/public/registerotp.html
+++ b/public/registerotp.html
@@ -222,7 +222,7 @@
                     float: center;
                     text-align: center;
                   ">
-                            The Walker Ledger Ltd. All rights reserved.
+                            Madhouse Wallet Copyright 2025. All rights reserved.
                         </p>
 
                     </td>
