--- a/public/transferemail.html
+++ b/public/transferemail.html
@@ -44,8 +44,10 @@
         width: 100%;
         max-width: calc(100% - 30px);
         margin: 50px auto;
-        background-color: #9abae2;
+        background-color: #df633c2e;
         box-shadow: 0px 0px 20px #eee;
+        border: 1px dashed #df613a;
+        border-radius: 10px;
       "
     >
       <!-- <img style="
@@ -79,6 +81,11 @@
               "
               width="596"
             >
+              <img
+                src="https://media.madhousewallet.com/logo.png"
+                style="height: 44px; object-fit: contain"
+                alt=""
+              />
               <h3
                 style="
                   font-size: 25px;
@@ -86,7 +93,7 @@
                   font-family: &quot;Helvetica&quot;, Arial, sans-serif;
                   font-weight: 600;
                   text-decoration: none;
-                  color: #030e49;
+                  color: #df613a;
                   text-align: center;
                   margin-bottom: 20px;
                 "
@@ -144,7 +151,7 @@
                   font-family: &quot;Helvetica&quot;, Arial, sans-serif;
                   font-weight: 600;
                   text-decoration: none;
-                  color: #030e49;
+                  color: #df613a;
                   text-align: left;
                   margin-top: 30px;
                 "
